add auth middleware on secure path
